syntax = "proto3";

package notification;

service NotificationService {
  rpc Create(CreateNotificationRequest) returns (Notification) {}
  rpc FindAll(Empty) returns (Notifications) {}
  rpc FindOne(NotificationById) returns (Notification) {}
  rpc Update(UpdateNotificationRequest) returns (Notification) {}
  rpc Remove(NotificationById) returns (Empty) {}
}

message Empty {}

message NotificationById {
  string id = 1;
}


message CreateNotificationRequest {
  int32 reservationId = 1;
  string message = 2;
  string notificationDate = 3;
  bool isSent = 4;
}

message UpdateNotificationRequest {
  string id = 1;
  Notification notification = 2;
}

message Notification {
  string id = 1;
  int32 reservationId = 2;
  string message = 3;
  string notifiacationDate = 4;
  bool isSent = 5;
}

message Notifications {
  repeated Notification notifications = 1;
}